Release history for CPAN-Changes-Group-Dependencies-Details

{{$NEXT}}

0.001003 2014-08-30T10:45:12Z
 [00 Trivial]
 - Metadata fixes.

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)

 [Metadata]
 - Set Author = kentnl

0.001002 2014-08-15T21:13:30Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - augment tests.
 - whitespace adjustment.

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: -3 (recommends: ↑1 -2)

 [Misc]
 - Improve source side POD to reduce build side whitespace

 [Tests]
 - Update Test::ReportPrereqs

0.001001 2014-07-27T06:13:09Z
 [Bugfix]
 - Actually filter relevant results per section.

0.001000 2014-07-26T09:53:08Z
 - First version.
